Fix overlapping items

--- a/css/style.css
+++ b/css/style.css
@@ -463,30 +463,36 @@ Features
 
 #features {
 	display: flex;
-/*
 	column-gap: 0.75rem;
-*/
-	height: 5rem;	
+	height: 19rem;	
 	margin: 1rem auto 0 auto;
 	width: 80%;
 	background-color: #E4E0D8;
+	flex-direction: row;
 }
 
 
 .image-container {
-	max-height: 4rem;
+	max-height: 16rem;
 	margin: 0 auto;
 	position: center;
+	object-fit: cover;
+	width: 100%;
+	height: auto;
+	overflow: hidden;
+}
+
+.content {
+	heigth: 1rem;
 }
 
 
 .feature img {
 	display: flex;
-	object-fit: cover;
 	width: 40%;
-	height: 20rem;
+	height: auto;
 	margin: 0 auto;
-
+	object-fit: fill;
 }
 
 
@@ -500,27 +506,27 @@ Features
 
 }
 
-
 .feature img,
 .feature p {
 	margin: auto;
 	width: 100%;
 	padding-bottom: 0.5rem;
 }
-*/
 
 /*====================================
 Community
 ====================================*/
 
+
 #community {
 	display: flex;
-	position: static;
+	margin-top: 6rem;
 	margin-bottom: .75rem;
-	align-items: center;
+	align-items: center;5
 	align-content: center;
 	margin-left: 10%;
 	margin-right: .15rem;
+	flex-wrap: nowrap;
 }
 
 
@@ -543,7 +549,6 @@ Community
 }
 
 #community img {
-	display: flex;
 	margin: 0 auto;
 	width: 100%;
 	height: auto;
@@ -556,6 +561,10 @@ Community
 .community-sign-up {
 	margin-right: .25rem;
 	width: 40rem;
+}
+
+@media only screen and (max-width: 600px) {
+	/* ruleset for >= 600px */
 }
 
 /*===================================
